// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor test Render snapshot anchor 1`] = `
<a
  className="Anchor"
  href="test"
  onClick={[Function]}
  onKeyPress={[Function]}
  target="_self"
/>
`;

exports[`Anchor test Render snapshot pseudoLink 1`] = `
<span
  className="Anchor"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
/>
`;
